# cpp-sdl-lazy-foo

tut_01/: CMakeLists.txt  README.md  main.cpp
tut_04/: CMakeLists.txt  main.cpp
tut_05/: CMakeLists.txt  Env.cmake  README.md  main.cpp
tut_05/assets/: arrows.psd
tut_05/cmake-modules/: FindSDL2_image.cmake
tut_06/: CMakeLists.txt
